--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+
+
+server.servlet.context-path=/kafka-producer-example
+server.port=8080
+
+kafka.bootstrapAddress=localhost:9092
+kafka.topicName=quickstart-events
